--- a/app/templates/test.hbs
+++ b/app/templates/test.hbs
@@ -1,2 +1,9 @@
-<div>...</div>
-<p></p>
+<body>
+    <p>
+        <span>3321</span>
+        <ul>
+            <li>dsksdk</li>
+            <li>{{ varname }}</li>
+        </ul>
+    </p>
+</body>
