Стартовая страница + работающие кнопки входа и регистрации

--- a/app/templates/enter/layout.hbs
+++ b/app/templates/enter/layout.hbs
@@ -20,9 +20,9 @@
     <div id="register" data-role="enter-btns">
         <div class="row">
             <div class="col-md-4 col-md-offset-4">
-                <button type="button" class="register_btn">Register</button>
+                <button type="button" class="register_btn" data-role="reg-btn">Register</button>
                 <br />
-                <button type="button" class="login_btn">Login</button>
+                <button type="button" class="login_btn" data-role="login-btn">Login</button>
             </div>
         </div>
     </div>
