--- a/app/templates/enter/login.hbs
+++ b/app/templates/enter/login.hbs
@@ -1,14 +1,13 @@
 <div class="register_div">
     <p>Login</p>
-    <p>If you don't have an account you can <a href="#">Register</a> </p>
+    <p>If you don't have an account you can <a href="#" data-role="reg-btn">Register</a> </p>
     <div class="form">
         <form action="" method="">
             <input type="text" name="login" placeholder="Type your login or email"><br>
-
             <input type="password" name="password" placeholder="Type your password"><br>
-            <a href="#" class="remember">Remember password</a>
+            {{!-- <a href="#" class="remember">Remember password</a> --}}
             <div class="events">
-                <a class="cancel">Cancel</a>
+                <a class="cancel" data-role="cancel-btn">Cancel</a>
                 <input type="submit" value="Complete">
             </div>
         </form>
