--- a/app/templates/enter/registration.hbs
+++ b/app/templates/enter/registration.hbs
@@ -1,13 +1,13 @@
 <div class="register_div">
     <p>Registration</p>
-    <p>You'll create your 10tracks account. You can <a href="#">Login</a> instead</p>
+    <p>You'll create your 10tracks account. You can <a href="#" data-role="login-btn">Login</a> instead</p>
     <div class="form">
         <form action="" method="">
             <input type="text" name="login" placeholder="Type your login"><br>
             <input type="email" name="email" placeholder="Type your email"><br>
             <input type="password" name="password" placeholder="Type your password"><br>
             <div class="events">
-                <a class="cancel">Cancel</a>
+                <a class="cancel" data-role="cancel-btn">Cancel</a>
                 <input type="submit" value="Complete">
             </div>
         </form>
