--- a/app/templates/enter/registration.hbs
+++ b/app/templates/enter/registration.hbs
@@ -2,13 +2,13 @@
     <p>Registration</p>
     <p>You'll create your 10tracks account. You can <a href="#" data-role="login-btn">Login</a> instead</p>
     <div class="form">
-        <form action="" method="">
+        <form action="" method="" data-role="registration-form">
             <input type="text" name="login" placeholder="Type your login"><br>
             <input type="email" name="email" placeholder="Type your email"><br>
             <input type="password" name="password" placeholder="Type your password"><br>
             <div class="events">
                 <a class="cancel" data-role="cancel-btn">Cancel</a>
-                <input type="submit" value="Complete">
+                <input type="submit" value="Complete" data-role="complete-btn" data-loading-text="Loading..." />
             </div>
         </form>
     </div>
