--- a/app/templates/suggest.hbs
+++ b/app/templates/suggest.hbs
@@ -1,6 +1,14 @@
 <form>
     <input type="text" name="search" class="search" placeholder="Song artist ot genre...">
 </form>
+<div class="music_list">
+    <div class="artist_row">
+         <p class="artist_name">Lil Wayne</p> <a href="#" class="orange">artist</a>
+    </div>
+    <div class="artist_row">
+        <p class="artist_name">Lil's Way</p> <a href="#" class="orange">album</a>
+    </div>
+</div>
 <span class="search_click">
     <i class="fa fa-search" data-role="open-btn"></i>
     <i class="fa fa-arrow-right" data-role="search-btn"></i>
