--- a/app/templates/suggest.hbs
+++ b/app/templates/suggest.hbs
@@ -11,5 +11,5 @@
 </div>
 <span class="search_click">
     <i class="fa fa-search" data-role="open-btn"></i>
-    <i class="fa fa-arrow-right" data-role="search-btn"></i>
+    <i class="fa fa-arrow-right" data-role="close-btn"></i>
 </span>
