--- a/app/templates/player/song.hbs
+++ b/app/templates/player/song.hbs
@@ -4,8 +4,8 @@
             <span><i class="fa fa-circle circlei"></i></span>
         </div>
         <div class="col-md-6 name_artist">
-            <h4>SHI</h4>
-            <h4>Linkin sad</h4>
+            <h4>{{ songArtist }}</h4>
+            <h4>{{ title }}</h4>
         </div>
         <div class="col-md-4 fade_in">
             <a class="orange">Generate</a>
