--- a/app/templates/suggest/control.hbs
+++ b/app/templates/suggest/control.hbs
@@ -1,5 +1,5 @@
 <form>
-    <input type="text" name="search" class="search" placeholder="Song artist ot genre...">
+    <input type="text" name="search" class="search" autocomplete="off" placeholder="Song artist ot genre...">
 </form>
 <div class="music_list" data-role="items-container"></div>
 <span class="search_click">
