--- a/app/templates/player/song.hbs
+++ b/app/templates/player/song.hbs
@@ -8,7 +8,7 @@
             <h4>{{ title }}</h4>
         </div>
         <div class="col-md-4 fade_in">
-            <a class="orange">Generate</a>
+            <a class="orange" data-role="generate-by-song-btn">Generate</a>
             <p>based on this song</p>
         </div>
     </div>
