Генерация по 50 треков

--- a/app/templates/player/artist.hbs
+++ b/app/templates/player/artist.hbs
@@ -1,8 +1,8 @@
 <div class="container">
     <div class="row">
         <div class="col-md-4 col-md-offset-4">
-            <h3>Breacking the Silence</h3>
-            <h4>Linkin Park</h4>
+            <h3>{{ title }}</h3>
+            <h4>{{ artist }}</h4>
         </div>
     </div>
 </div>
