--- a/app/templates/enter/layout.hbs
+++ b/app/templates/enter/layout.hbs
@@ -1,29 +1,10 @@
-<div class="container">
-    <div class="row">
-        <div class="col-md-4 col-md-offset-4">
-            <p class="welcome">Welcome to</p>
-            <p class="music">Music Sense</p>
-        </div>
-    </div>
-    <div id="social">
-        <div class="row">
-            <div class="col-md-4 col-md-offset-4">
-                <span class="social"><i class="fa fa-facebook"></i></span>
-                <span class="social"><i class="fa fa-google-plus"></i></span>
-                <span class="social"><i class="fa fa-vk"></i></span>
-            </div>
-        </div>
-    </div>
-    <div data-role="loading">
-        <p>Загрузка...</p>
-    </div>
-    <div id="register" data-role="enter-btns">
-        <div class="row">
-            <div class="col-md-4 col-md-offset-4">
-                <button type="button" class="register_btn" data-role="reg-btn">Register</button>
-                <br />
-                <button type="button" class="login_btn" data-role="login-btn">Login</button>
-            </div>
-        </div>
-    </div>
-</div>
+<header class="header">
+    <nav id="nav" class="navbar navbar-default  navbar-fixed-top"  role="navigation">
+      <div class="container">
+          <a class="navbar-brand center-block" href="/#home">
+            <img src="/assets/images/logo.png" alt="10tracks"/>
+          </a>
+      </div>
+    </nav>
+</header>
+<div class="container" data-role="forms"></div>
