--- a/app/templates/enter/login.hbs
+++ b/app/templates/enter/login.hbs
@@ -1,16 +1,19 @@
-<div class="register_div">
-    <p>Login</p>
-    <p>If you don't have an account you can <a href="#" data-role="reg-btn">Register</a> </p>
-    <div class="form">
-        <form action="" method="" data-role="login-form">
-            <input type="text" name="login" placeholder="Type your login or email"><br>
-            <input type="password" name="password" placeholder="Type your password"><br>
-            {{!-- <a href="#" class="remember">Remember password</a> --}}
-            <div class="events">
-                <a class="cancel" data-role="cancel-btn">Cancel</a>
-                <input type="submit" value="Complete" data-loading-text="Loading..." data-role="complete-btn" />
+<div class="col-sm-4 col-sm-offset-4">
+    <div class="form-wrap">
+        <h3 class="text-center">Log in to your 10tracks account</h3>
+        <form role="form" action="" method="post" data-role="login-form" autocomplete="off">
+            <div class="form-group">
+                <label for="login" class="sr-only">Login</label>
+                <input type="text" name="login" id="login" class="form-control" placeholder="Type your login or email">
             </div>
+             <div class="form-group">
+                <label for="password" class="sr-only">Password</label>
+                <input type="password" name="password" id="password" class="form-control" placeholder="Type your password">
+            </div>
+            <input type="submit" data-loading-text="Loading..." data-role="complete-btn" class="btn btn-default  btn-block " value="Login" />
         </form>
-
     </div>
+    <p>
+        <a href="#" data-role="reg-btn">Register</a>
+    </p>
 </div>
