--- a/app/templates/enter/registration.hbs
+++ b/app/templates/enter/registration.hbs
@@ -1,4 +1,28 @@
-<div class="register_div">
+<div class="col-sm-4 col-sm-offset-4">
+    <div class="form-wrap">
+        <h3 class="text-center">Register new 10tracks account</h3>
+        <form role="form" action="" method="post" data-role="registration-form" autocomplete="off">
+            <div class="form-group">
+                <label for="login" class="sr-only">Login</label>
+                <input type="text" name="login" id="login" class="form-control" placeholder="Type new login">
+            </div>
+            <div class="form-group">
+                <label for="email" class="sr-only">Login</label>
+                <input type="email" name="email" id="email" class="form-control" placeholder="Type new email">
+            </div>
+             <div class="form-group">
+                <label for="password" class="sr-only">Password</label>
+                <input type="password" name="password" id="password" class="form-control" placeholder="Type new password">
+            </div>
+            <input type="submit" data-loading-text="Loading..." data-role="complete-btn" class="btn btn-default  btn-block " value="Register" />
+        </form>
+    </div>
+    <p>
+        <a href="#" data-role="login-btn">Login</a>
+    </p>
+</div>
+
+{{!-- <div class="register_div">
     <p>Registration</p>
     <p>You'll create your 10tracks account. You can <a href="#" data-role="login-btn">Login</a> instead</p>
     <div class="form">
@@ -12,4 +36,4 @@
             </div>
         </form>
     </div>
-</div>
+</div> --}}
