--- a/app/templates/enter/registration.hbs
+++ b/app/templates/enter/registration.hbs
@@ -7,7 +7,7 @@
                 <input type="text" name="login" id="login" class="form-control" placeholder="Type new login">
             </div>
             <div class="form-group">
-                <label for="email" class="sr-only">Login</label>
+                <label for="email" class="sr-only">Email</label>
                 <input type="email" name="email" id="email" class="form-control" placeholder="Type new email">
             </div>
              <div class="form-group">
