--- a/app/templates/player/layout.hbs
+++ b/app/templates/player/layout.hbs
@@ -27,53 +27,9 @@
 
                 <!-- Tab panes -->
                 <div class="tab-content">
-                    <div role="tabpanel" class="tab-pane fade in active" id="now-playing">
-                        <figure class="player">
-                            <img src="/assets/images/cover.png" alt="player" />
-                            <figcaption>
-                                <h6>BREAKING THE SILENCE</h6>
-                                <p class="small">Linkin Park</p>
-                                <ul class="btn-play list-unstyled">
-                                    <li><a href="#"><i class="fa fa-heart"></i></a></li>
-                                    <li><a href="#"><i class="fa fa-play"></i></a></li>
-                                    <li><a href="#"><i class="fa fa-forward"></i></a></li>
-                                </ul>
-                            </figcaption>
-                        </figure>
-                        <div class="time" id="">
-
-                            <input id="slider" data-slider-id='ex1Slider' type="text" data-slider-min="0" data-slider-max="20" data-slider-step="1" data-slider-value="14"/>
-                        </div>
-                        <p class="time-marks"><span class="pull-left">1.34</span><span class="pull-right">2.34</span></p>
-                        <div class="btn-like">
-                            <a class="" href="#"></a>
-                            <a class="" href="#"></a>
-                        </div>
-                    </div><!-- tab panel-->
-                    <div role="tabpanel" class="tab-pane fade" id="search">
-                        <div class="row">
-                            <div class="col-sm-12  col-center-block">
-                                <form class="form-inline" role="form">
-                                    <div class="form-group">
-                                        <div class="input-group">
-                                            <input class="form-control input-sm" type="text" placeholder="Search for song, artist or genre…">
-                                                        <span class="input-group-btn">
-                                                            <span class="btn btn-default btn-sm">
-                                                                <i class="fa fa-search"></i>
-                                                            </span>
-                                                        </span>
-                                        </div>
-                                    </div>
-                                </form>
-                                <div class="pie_progress" role="progressbar">
-                                    <div class="pie_progress__number">0%</div>
-                                    <div class="pie_progress__label">Text Label</div>
-                                </div>
-                                <button id="button_start"class="btn btn-default">Start</button>
-                            </div>
-                        </div>
-                    </div><!-- tab panel-->
-                </div><!-- tab-content -->
+                    <div role="tabpanel" class="tab-pane fade in active" id="now-playing" data-role="player"></div>
+                    <div role="tabpanel" class="tab-pane fade" id="search" data-role="suggest"></div>
+                </div>
             </article>
         </div><!-- col-->
         <div class="col-lg-3 col-md-4  col-sm-5 ">
@@ -87,69 +43,8 @@
                 <!-- Tab panes -->
                 <div class="tab-content" >
 
-                    <div role="tabpanel" class="tab-pane fade" id="playing-next">
-                        <ul class=" media-list">
-                            <li class="media">
-                                <a class="pull-left" href="#">
-                                    <img src="/assets/images/icon-list.png" alt="icon">
-                                </a>
-                                <div class="media-body text-left">
-                                    <h5 class="media-heading ">Breaking the habits</h5>
-                                    <p>Linkin Park</p>
-                                </div>
-                            </li>
-                            <li class="media">
-                                <a class="pull-left" href="#">
-                                    <img src="/assets/images/icon-list.png" alt="icon">
-                                </a>
-                                <div class="media-body text-left">
-                                    <h5 class="media-heading ">Breaking the habits</h5>
-                                    <p>Linkin Park</p>
-                                </div>
-                            </li>
-                            <li class="media">
-                                <a class="pull-left" href="#">
-                                    <img src="/assets/images/icon-list.png" alt="icon">
-                                </a>
-                                <div class="media-body text-left">
-                                    <h5 class="media-heading ">Breaking the habits</h5>
-                                    <p>Linkin Park</p>
-                                </div>
-                            </li>
-                        </ul>
-                    </div><!-- tab panel-->
-
-                    <div role="tabpanel" class="tab-pane fade in active " id="favorites">
-                        <div class="row">
-                            <div class="col-sm-6">
-                                <figure class="favorites first">
-                                    <a href="#"><img src="/assets/images/btn-circle-1.png" alt="button"/></a>
-                                    <figcaption>
-                                        <h5>Storage base</h5>
-                                        <p>Jump kitty</p>
-                                    </figcaption>
-                                </figure>
-                            </div>
-                            <div class="col-sm-6">
-                                <figure class="favorites second">
-                                    <a href="#"><img src="/assets/images/btn-circle-2.png" alt="button"/></a>
-                                    <figcaption>
-                                        <h5>Free slot</h5>
-                                        <p ></p>
-                                    </figcaption>
-                                </figure>
-                            </div>
-                            <div class="col-sm-6">
-                                <figure class="favorites">
-                                    <a href="#"><img src="/assets/images/btn-circle-3.png" alt="button"/></a>
-                                    <figcaption>
-                                        <h5>Get more space</h5>
-                                        <p> Jump kitty</p>
-                                    </figcaption>
-                                </figure>
-                            </div>
-                        </div>
-                    </div><!-- tab panel-->
+                    <div role="tabpanel" class="tab-pane fade" id="playing-next" data-role="playlist"></div><!-- tab panel-->
+                    <div role="tabpanel" class="tab-pane fade in active " id="favorites" data-role="favorites"></div><!-- tab panel-->
 
                 </div><!-- tab-content -->
             </article>
