--- a/app/templates/player/layout.hbs
+++ b/app/templates/player/layout.hbs
@@ -28,7 +28,7 @@
                 <!-- Tab panes -->
                 <div class="tab-content">
                     <div role="tabpanel" class="tab-pane fade in active" id="now-playing" data-role="player"></div>
-                    <div role="tabpanel" class="tab-pane fade" id="search" data-role="suggest"></div>
+                    <div role="tabpanel" class="tab-pane fade" id="search" data-role="search"></div>
                 </div>
             </article>
         </div><!-- col-->
