typeahead in bower

--- a/app/templates/player/search/layout.hbs
+++ b/app/templates/player/search/layout.hbs
@@ -4,7 +4,7 @@
             <div class="input-group">
                 <input class="form-control input-sm" type="text" data-role="search-name" placeholder="Search for song, artist or genre…" />
                 <input type="hidden" data-role="search-type" />
-                <span class="input-group-btn">
+                <span class="input-group-btn" data-role="generate-btn">
                     <span class="btn btn-default btn-sm">
                         <i class="fa fa-search"></i>
                     </span>
@@ -16,5 +16,5 @@
         <div class="pie_progress__number">0%</div>
         <div class="pie_progress__label">Text Label</div>
     </div>
-    <button id="button_start" class="btn btn-default">Start</button>
+    <button id="button_start" class="btn btn-default" data-role="generate-btn">Start</button>
 </div>
