Методы активации вкладок плеера

--- a/app/templates/player/layout.hbs
+++ b/app/templates/player/layout.hbs
@@ -21,8 +21,8 @@
             <article>
                 <!-- Nav tabs -->
                 <ul class="nav nav-tabs" role="tablist">
-                    <li role="presentation" class="active"><a href="#now-playing" role="tab" data-toggle="tab">Now playing</a></li>
-                    <li role="presentation" class=""><a href="#search" role="tab" data-toggle="tab">Search</a></li>
+                    <li role="presentation" class="active"><a href="#now-playing" role="tab" data-toggle="tab" data-role="player-tab">Now playing</a></li>
+                    <li role="presentation" class=""><a href="#search" role="tab" data-toggle="tab" data-role="search-tab">Search</a></li>
                 </ul>
 
                 <!-- Tab panes -->
@@ -36,8 +36,8 @@
             <article>
                 <!-- Nav tabs -->
                 <ul class="nav nav-tabs" role="tablist">
-                    <li role="presentation" class=""><a href="#playing-next" role="tab" data-toggle="tab">Playing next</a></li>
-                    <li role="presentation" class="active"><a href="#favorites" role="tab" data-toggle="tab">Favorites</a></li>
+                    <li role="presentation" class=""><a href="#playing-next" role="tab" data-toggle="tab" data-role="playlist-tab">Playing next</a></li>
+                    <li role="presentation" class="active"><a href="#favorites" role="tab" data-toggle="tab" data-role="favorites-tab">Favorites</a></li>
                 </ul>
 
                 <!-- Tab panes -->
