По умолчанию активна вкладка "поиск"

--- a/app/templates/player/layout.hbs
+++ b/app/templates/player/layout.hbs
@@ -21,14 +21,14 @@
             <article>
                 <!-- Nav tabs -->
                 <ul class="nav nav-tabs" role="tablist">
-                    <li role="presentation" class="active"><a href="#now-playing" role="tab" data-toggle="tab" data-role="player-tab">Now playing</a></li>
-                    <li role="presentation" class=""><a href="#search" role="tab" data-toggle="tab" data-role="search-tab">Search</a></li>
+                    <li role="presentation"><a href="#now-playing" role="tab" data-toggle="tab" data-role="player-tab">Now playing</a></li>
+                    <li role="presentation" class="active"><a href="#search" role="tab" data-toggle="tab" data-role="search-tab">Search</a></li>
                 </ul>
 
                 <!-- Tab panes -->
                 <div class="tab-content">
-                    <div role="tabpanel" class="tab-pane fade in active" id="now-playing" data-role="player"></div>
-                    <div role="tabpanel" class="tab-pane fade" id="search" data-role="search"></div>
+                    <div role="tabpanel" class="tab-pane fade" id="now-playing" data-role="player"></div>
+                    <div role="tabpanel" class="tab-pane fade in active" id="search" data-role="search"></div>
                 </div>
             </article>
         </div><!-- col-->
