при нажатии на трек в плейлисте - генерируется новая лента

--- a/app/templates/player/playlist/item.hbs
+++ b/app/templates/player/playlist/item.hbs
@@ -1,4 +1,4 @@
-<a class="pull-left" href="#">
+<a class="pull-left" href="#" data-role="btn">
     <img src="/assets/images/icon-list.png" alt="icon">
 </a>
 <div class="media-body text-left">
