like/dislike реализовано

--- a/app/templates/player/player/layout.hbs
+++ b/app/templates/player/player/layout.hbs
@@ -14,7 +14,7 @@
     <input type="text" data-role="slider" />
 </div>
 <p class="time-marks"><span class="pull-left" data-role="start-time-label">0</span><span class="pull-right" data-role="end-time-label">...</span></p>
-<div class="btn-like">
+<div class="btn-like" data-role="like-btns-container">
     <a class="" href="#" data-role="like-btn"></a>
     <a class="" href="#" data-role="dislike-btn"></a>
 </div>
