Удаление трека из избранного

--- a/app/templates/player/favorites/item.hbs
+++ b/app/templates/player/favorites/item.hbs
@@ -3,5 +3,8 @@
     <figcaption>
         <h5>{{ title }}</h5>
         <p>{{ artist }}</p>
+        <p>
+            <a href="#" data-role="remove-btn">remove</a>
+        </p>
     </figcaption>
 </figure>
