- Иконки артиста в списке - Выводится полный список

--- a/app/templates/player/playlist/item.hbs
+++ b/app/templates/player/playlist/item.hbs
@@ -1,5 +1,5 @@
 <a class="pull-left" href="#" data-role="btn">
-    <img src="/assets/images/icon-list.png" alt="icon">
+    <img src="/assets/images/icon-list.png" alt="icon" width="30" height="30" data-role="icon" />
 </a>
 <div class="media-body text-left">
     <h5 class="media-heading ">{{ title }}</h5>
